@@ -5,6 +5,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 	Tom Collins
 	- Add 'compile' script to distribution.
+	- If warn() isn't available, use fprintf() instead.
 
 5.4.14 - released 17-Jan-06
 
